--- a/settings.tex
+++ b/settings.tex
@@ -1,4 +1,6 @@
 \usepackage[utf8]{inputenc}
+\usepackage{titletoc}
+\usepackage{lipsum}
 \usepackage{listings}
 \usepackage{fancybox}
 \usepackage{graphicx}
