--- a/Manual/manual.tex
+++ b/Manual/manual.tex
@@ -1,7 +1,7 @@
 \chapter{User Manual}
 
-\startcontents[chapters]
-\printcontents[chapters]{}{1}{}
+
+%CONTENTS PAGE
 
 
 \section{Introduction}
@@ -364,7 +364,7 @@ My program contains no errors which lead to the program needing to be recovered 
 
 \section{System Recovery}
 
-\subsection{Backing-up Data} %Change step by step to just USB
+\subsection{Backing-up Data} %Change step by step to just database file
 
 To back up the program, you need to copy the folder that you extracted during the installation to an external hard drive/USB drive. The figure below shows the backing up of the system to a USB drive.
 
@@ -375,7 +375,7 @@ To back up the program, you need to copy the folder that you extracted during th
 
 \begin{enumerate}
 \item Find the location of the folder that you extracted during the installation of the program.
-\item Go into the folder and click 'implementation', then on the 'skateboard_progress_tracker.db' file right click and press 'copy'.
+\item Go into the folder and click 'implementation', then on the 'skateboard\_progress\_tracker.db' file right click and press 'copy'.
 \item Find the USB drive folder and open it.
 \item Right click in the folder and select 'paste' 
 \item Wait for the copying process to finish, and the back up of the program will be on your USB drive.
