--- a/settings.tex
+++ b/settings.tex
@@ -1,5 +1,6 @@
 \usepackage[utf8]{inputenc}
 \usepackage{titletoc}
+\usepackage{minitoc}
 \usepackage{lipsum}
 \usepackage{listings}
 \usepackage{fancybox}
