--- a/Evaluation/evaluation.tex
+++ b/Evaluation/evaluation.tex
@@ -11,7 +11,7 @@ Below is a list of all my general and specific objectives that I set myself in t
 
 \subsection{Videos organised and filtering capabilities.}
 
-This objective has been partially met. The video links are organised in the tricks table in the order of TrickID.
+This objective has been partially met. The video links are organised in the tricks table in the order of TrickID; however there are no fitering capabilities implemented in the program at this stage. 
 
 
 
@@ -29,18 +29,18 @@ This objective has not been met.
 
 \subsection{Non-biased reviews.}
 
-This objective has not been met.
+This objective has been met to an extent.
 
 
 
 \subsection{Clear database with a list of tricks in.} %Need feedback
 
-
+This objective has been met.
 
 
 \subsection{ Easy to filter through tricks known.}
 
-This objective has not been met.
+This objective has not been met. As discussed before filtering capabilities have not been implemented in this version of the program.
 
 
 
@@ -169,6 +169,58 @@ This objective has been met.
 \section{End User Evidence}
 
 \subsection{Questionnaires}
+
+\subsubsection{Client Feedback Questionnaire} %TRIM PDF
+
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Evaluation/images/StuFeedback1.pdf}
+    \caption{Stuart Keppie Client Feedback Part 1} \label{fig:StuFeedback1}
+\end{figure}
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Evaluation/images/StuFeedback2.pdf}
+    \caption{Stuart Keppie Client Feedback Part 2} \label{fig:StuFeedback2}
+\end{figure}
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Evaluation/images/StuFeedback3.pdf}
+    \caption{Stuart Keppie Client Feedback Part 3} \label{fig:StuFeedback3}
+\end{figure}
+
+\subsubsection{General Feedback Questionnaire}
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Evaluation/images/PierreFeedback1.pdf}
+    \caption{Pierre Feedback Part 1} \label{fig:PierreFeedback1}
+\end{figure}
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Evaluation/images/PierreFeedback1.pdf}
+    \caption{Pierre Feedback Part 2} \label{fig:PierreFeedback2}
+\end{figure}
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Evaluation/images/LeucilleFeedback1.pdf}
+    \caption{Leucille Feedback Part 1} \label{fig:LeucilleFeedback1}
+\end{figure}
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Evaluation/images/LeucilleFeedback2.pdf}
+    \caption{Leucille Feedback Part 2} \label{fig:LeucilleFeedback2}
+\end{figure}
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Evaluation/images/SueFeedback1.pdf}
+    \caption{Sue Feedback Part 1} \label{fig:SueFeedback1}
+\end{figure}
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Evaluation/images/SueFeedback2.pdf}
+    \caption{Sue Feedback Part 2} \label{fig:SueFeedback2}
+\end{figure}
+
+
 
 \subsection{Graphs}
 
